пофиксил багулю с отображением истории